syntax = "proto3";
option csharp_namespace = "UserService.Grpc";

service UserValidation {
  rpc Validate(LoginRequest) returns (UserResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string role = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {
  string id = 1;
  bool success = 2;
  string message = 3;
}